--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
 
                                 <!--Background Text-->
                                 <div class="recent-works-bg-text c-speed-block_title" data-scroll="">
-                                    Our Works
+                                    Recent Works
                                 </div>
                                 <!--Background Text-->
 
@@ -875,25 +875,48 @@
                                     </div>
                                     <!--/Project-->
                                     <!--Project-->
-                                    <div class="ar-work">
-
-                                        <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
-                                            data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
-                                            data-cursor="-color-dmtca">
-
+                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="10"
+                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-bl">
+                                        <!--Project URL-->
+                                        <a href="#">
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="./assets/resources/img/DMTCA-work.png">
+                                                <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
                                             </div>
                                             <!--/Project Image-->
+
                                             <!--Project Title-->
-                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Dmtca</div>
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Kedarkala
+                                            </div>
+                                            <!--/Project Title-->
+
+                                            <!--Project Category-->
+                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
+                                                Design, Development, Marketing</div>
+                                            <!--/Project Category-->
+                                        </a>
+
+                                    </div>
+                                    <!--/Project-->
+                                    <!--Project-->
+                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="10"
+                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-ystart">
+                                        <!--Project URL-->
+                                        <a href="#">
+                                            <!--Project Image-->
+                                            <div class="ar-work-image o-image" data-scroll>
+                                                <img alt="Project Image" src="/assets/resources/img/pdtl-work.png">
+                                            </div>
+                                            <!--/Project Image-->
+
+                                            <!--Project Title-->
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">PDTL
+                                            </div>
                                             <!--/Project Title-->
 
                                             <!--Project Category-->
                                             <div class="ar-work-cat c-speed-block_title" data-scroll="">Design,
-                                                Development
-                                            </div>
+                                                Development</div>
                                             <!--/Project Category-->
                                         </a>
 
@@ -930,135 +953,26 @@
 
                                         <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
                                             data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
-                                            data-cursor="-color-cert">
+                                            data-cursor="-color-dmtca">
 
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/work-certvault.png">
-                                            </div>
-                                            <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Certvault
-                                            </div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
-                                                Design, Marketing</div>
-                                            <!--/Project Category-->
-                                        </a>
-
-
-                                    </div>
-                                    <!--/Project-->
-                                    <!--Project-->
-                                    <div class="ar-work">
-
-                                        <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
-                                            data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
-                                            data-cursor="-color-patra">
-
-                                            <!--Project Image-->
-                                            <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/Patrapay-work.png">
-                                            </div>
-                                            <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Patra Pay
-                                            </div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
-                                                Design, Marketing</div>
-                                            <!--/Project Category-->
-                                        </a>
-
-
-                                    </div>
-                                    <!--/Project-->
-                                    <!--Project-->
-                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="10"
-                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-bl">
-                                        <!--Project URL-->
-                                        <a href="#">
-                                            <!--Project Image-->
-                                            <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
-                                            </div>
-                                            <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Kedarkala
-                                            </div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy,
-                                                Design, Development, Marketing</div>
-                                            <!--/Project Category-->
-                                        </a>
-
-                                    </div>
-                                    <!--/Project-->
-
-                                    <!--Project-->
-                                    <div class="ar-work">
-
-                                        <!--Project URL--><a href="#" data-tilt data-tilt-glare="true"
-                                            data-tilt-max="10" data-tilt-speed="20" data-cursor-text="View"
-                                            data-cursor="-color-dharan">
-
-                                            <!--Project Image-->
-                                            <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/dharan-work.png">
+                                                <img alt="Project Image" src="./assets/resources/img/DMTCA-work.png">
                                             </div>
                                             <!--/Project Image-->
                                             <!--Project Title-->
-                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Dharan
-                                            </div>
-                                            <!--/Project Title-->
-
-                                            <!--Project Category-->
-                                            <div class="ar-work-cat c-speed-block_title" data-scroll="">Strategy, Design
-                                            </div>
-                                            <!--/Project Category-->
-                                        </a>
-
-                                    </div>
-                                    <!--/Project-->
-                                    <!--Project-->
-                                    <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="10"
-                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-ystart">
-                                        <!--Project URL-->
-                                        <a href="#">
-                                            <!--Project Image-->
-                                            <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/pdtl-work.png">
-                                            </div>
-                                            <!--/Project Image-->
-
-                                            <!--Project Title-->
-                                            <div class="ar-work-title c-speed-block_title" data-scroll="">PDTL
-                                            </div>
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Dmtca</div>
                                             <!--/Project Title-->
 
                                             <!--Project Category-->
                                             <div class="ar-work-cat c-speed-block_title" data-scroll="">Design,
-                                                Development</div>
+                                                Development
+                                            </div>
                                             <!--/Project Category-->
                                         </a>
 
                                     </div>
                                     <!--/Project-->
-
-
-
-
-
-
                                 </div>
                                 <!--/Works Wrapper-->
                             </div>
@@ -1092,9 +1006,20 @@
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
-                                                <a href="dmtca.html">
-                                                    <img src="/assets/resources/img/DMTCA-mobile-work.png">
-                                                    <h2><span>02</span>Dmtca</h2>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/work-kedar-mobile.png">
+                                                    <h2><span>02</span>Kedarkala</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port o-image" data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/pdtl-mobile-work.png">
+                                                    <h2><span>03</span>PDTL</h2>
                                                 </a>
                                             </div>
                                         </div>
@@ -1104,7 +1029,7 @@
                                             <div class="port o-image" data-scroll>
                                                 <a href="#">
                                                     <img src="/assets/resources/img/QuickX-mobile-Work.png">
-                                                    <h2><span>03</span>Quickx</h2>
+                                                    <h2><span>04</span>Quickx</h2>
                                                 </a>
                                             </div>
                                         </div>
@@ -1112,55 +1037,13 @@
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
-                                                <a href="certvault.html">
-                                                    <img src="/assets/resources/img/m-certvault.png">
-                                                    <h2><span>04</span>Certvault</h2>
+                                                <a href="dmtca.html">
+                                                    <img src="/assets/resources/img/DMTCA-mobile-work.png">
+                                                    <h2><span>05</span>Dmtca</h2>
                                                 </a>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="swiper-slide">
-                                        <div class="content">
-                                            <div class="port o-image" data-scroll>
-                                                <a href="#">
-                                                    <img src="/assets/resources/img/Patrapay-work-mobile.png">
-                                                    <h2><span>05</span>Patra Pay</h2>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <div class="content">
-                                            <div class="port o-image" data-scroll>
-                                                <a href="#">
-                                                    <img src="/assets/resources/img/work-kedar-mobile.png">
-                                                    <h2><span>06</span>Kedarkala</h2>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <div class="content">
-                                            <div class="port o-image" data-scroll>
-                                                <a href="#">
-                                                    <img src="/assets/resources/img/dharan-mobile-work.png">
-                                                    <h2><span>07</span>Dharan</h2>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <div class="content">
-                                            <div class="port o-image" data-scroll>
-                                                <a href="#">
-                                                    <img src="/assets/resources/img/pdtl-mobile-work.png">
-                                                    <h2><span>08</span>PDTL</h2>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
 
                                 </div>
                                 <div class="swiper-pagination"></div>
