--- a/works.html
+++ b/works.html
@@ -238,6 +238,7 @@
                                         </a>
 
                                     </div>
+                                    <!--  -->
                                     <div class="cas-project">
                                         <a href="" data-cursor-text="View" data-cursor=" -color-pdtl">
                                             <div class="cs-image">
@@ -250,7 +251,19 @@
                                         </a>
 
                                     </div>
+                                    <!--  -->
+                                    <div class="cas-project">
+                                        <a href="" data-cursor-text="View" data-cursor=" -color-pdtl">
+                                            <div class="cs-image">
+                                                <img alt="Project Image" src="/assets/resources/img/Riva-Work.png">
+                                            </div>
+                                            <div class="cs-title">
+                                                <a href="project-6.html" data-cursor-text="View"
+                                                    data-cursor=" -color-pdtl">Rivabuid</a>
+                                            </div>
+                                        </a>
 
+                                    </div>
 
                                 </div>
                                 <div class="cas-titles"></div>
